Revert "refactor: rewrite risk model to python" (#324)
Reverts FreiFahren/FreiFahren#322
